fix css on safari

--- a/src/Experience/Experience.css
+++ b/src/Experience/Experience.css
@@ -16,8 +16,7 @@
     font-size: 40px;
     font-family: 'Arapey', serif;
     color: rgb(55, 55, 55);
-    height: 20%;
-    /* background-color: skyblue; */
+    height: 15%;
 }
 .exp-body {
     font-family: 'Josefin Sans', sans-serif;
@@ -26,22 +25,22 @@
     justify-content: flex-start;
     align-items: center;
     width: 70%;
-    height: 80%;
-    /* background-color: seashell; */
+    height: 85%;
+    overflow: scroll;
 }
 .exp-study {
     width: 80%;
-    /* height: 100%; */
+    height: 23%;
+    padding-bottom: 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    /* background-color: silver; */
-    border-bottom: slategray solid 1px;
+    overflow: scroll;
 }
 .exp-degree {
     width: 25%;
-    height: 10%;
+    height: 40%;
     padding: 50px 20px;
     background-color: #A1B872;
     display: flex;
@@ -52,7 +51,7 @@
 }
 .exp-degree:hover {
     width: 25%;
-    height: 10%;
+    height: 40%;
     padding: 50px 20px;
     background-color: #A1B872;
     display: flex;
@@ -71,7 +70,7 @@
 }
 .exp-projects {
     width: 80%;
-    /* height: 100%; */
+    height: 70%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -79,8 +78,8 @@
     flex-wrap: wrap;
 }
 .exp-project {
-    width: 20%;
-    height: 10%;
+    width: 22%;
+    height: 60px;
     padding: 40px 5px;
     background-color: #BED3D4;
     display: flex;
@@ -90,10 +89,11 @@
     text-align: left;
     margin: 1% 0;
     cursor: pointer;
+    overflow: scroll;
 }
 .exp-project:hover {
-    width: 20%;
-    height: 10%;
+    width: 22%;
+    height: 60px;
     padding: 40px 5px;
     background-color: #BED3D4;
     display: flex;
@@ -149,7 +149,6 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    /* background-color: thistle; */
 }
 .exp-card-body {
     height: 80%;
@@ -177,29 +176,6 @@
     font-size: 20px;
     margin-bottom: 10px;
 }
-@media screen and (max-width: 768px) {
-    .exp-title {
-        height: 12%;
-        justify-content: flex-end;
-    }
-    .exp-body {
-        width: 80%;
-        font-size: 12px;
-    }
-    .exp-study {
-        width: 100%;
-    }
-    .exp-projects {
-        width: 100%;
-        font-size: smaller;
-        overflow: scroll;
-        margin: 15px 0;
-    }
-    .exp-project {
-        padding: 30px 15px;
-    }
-}
-
 @media screen and (max-width: 568px) {
     .exp-body {
         width: 80%;
@@ -207,20 +183,118 @@
     }
     .exp-study {
         width: 100%;
+        height: 18%;
     } 
     .exp-degree {
         width: 16%;
+        height: 5%;
+    }
+    .exp-degree:hover {
+        width: 16%;
+        height: 5%;
     }
     .exp-projects {
         width: 100%;
+        height: 70%;
         font-size: smaller;
         overflow: scroll;
-        margin: 10px 0;
+        margin: 5px 0;
     }
     .exp-project {
         /* width: 25%; */
+        height: 8%;
+        padding: 30px 20px;
+        padding-left: 5px;
+        overflow: scroll;
+    }
+    .exp-project:hover {
+        /* width: 25%; */
+        height: 8%;
         padding: 30px 20px;
         padding-left: 5px;
         overflow: scroll;
     }
 }
+@media (min-width:569px) and (max-width: 768px) {
+    .exp-title {
+        height: 12%;
+        justify-content: flex-end;
+    }
+    .exp-body {
+        width: 80%;
+        font-size: 12px;
+        font-size: 20px;
+    }
+    .exp-study {
+        margin-top: 50px;
+        width: 100%;
+        height: 15%;
+    }
+    .exp-degree {
+        width: 25%;
+        height: 25%;
+    }
+    .exp-degree:hover {
+        height: 25%;
+    }
+    .exp-projects {
+        width: 100%;
+        height: 60%;
+        font-size: smaller;
+        overflow: scroll;
+    }
+    .exp-project {
+        width: 18%;
+        height: 20%;
+        padding: 30px 15px;
+        overflow: scroll;
+    }
+    .exp-project:hover {
+        width: 18%;
+        height: 20%;
+        padding: 30px 15px;
+    }
+}
+
+@media (min-width:1024px) and (max-width: 1024px) {
+    .exp-title {
+        height: 12%;
+        justify-content: flex-end;
+    }
+    .exp-body {
+        width: 80%;
+        font-size: 12px;
+        font-size: 25px;
+    }
+    .exp-study {
+        margin-top: 50px;
+        width: 100%;
+        height: 15%;
+    }
+    .exp-degree {
+        width: 25%;
+        height: 25%;
+    }
+    .exp-degree:hover {
+        height: 25%;
+    }
+    .exp-projects {
+        width: 100%;
+        height: 60%;
+        font-size: smaller;
+        overflow: scroll;
+    }
+    .exp-project {
+        width: 18%;
+        height: 20%;
+        padding: 30px 15px;
+        overflow: scroll;
+    }
+    .exp-project:hover {
+        width: 18%;
+        height: 20%;
+        padding: 30px 15px;
+    }
+}
+
+
